test_regress/t/t_assert_prop_consec_rep_unsup.out
%Error-UNSUPPORTED: t/t_assert_prop_consec_rep_unsup.v:11:42: Unsupported: consecutive repetition with non-##1 cycle delay
                                                            : ... note: In instance 't'
   11 |   assert property (@(posedge clk) a [*2] ##3 b);
      |                                          ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_prop_consec_rep_unsup.v:14:37: Unsupported: standalone consecutive repetition range
                                                            : ... note: In instance 't'
   14 |   assert property (@(posedge clk) a [*2:3] |-> 1);
      |                                     ^~
%Error-UNSUPPORTED: t/t_assert_prop_consec_rep_unsup.v:17:42: Unsupported: trailing consecutive repetition range in sequence expression (e.g. a ##1 b[+])
                                                            : ... note: In instance 't'
   17 |   assert property (@(posedge clk) b ##1 a[+]);
      |                                          ^~~
%Error: Exiting due to
